# Mountainsea

doc/: rust-setup.md
node/src/: service.rs
pallets/hellokitty/: Cargo.toml
pallets/hellokitty/doc/: README.md
pallets/hellokitty/src/: lib.rs  linked_item.rs
pallets/helloocw/: Cargo.toml
pallets/helloocw/src/: lib.rs
pallets/helloproofs/: Cargo.toml
pallets/helloproofs/doc/: README.md
pallets/helloproofs/src/: lib.rs
pallets/mirrorerc20/: Cargo.toml
pallets/mirrorerc20/src/: lib.rs  tests.rs
pallets/ocw-currency-price/: Cargo.toml
pallets/ocw-currency-price/doc/: README.md
pallets/ocw-currency-price/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
