[package]
name = "ocw-currency-price"
version = "2.0.1"
authors = ["Nozdormu <w1999wtw3537@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.substrate]
categories = [
  "pallet",
  "offchain worker",
  "tutorial",
  "recipe",
]

compatibility_version = "2.0.1"

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
parking_lot = "0.10.0"
serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
serde_json = { package = "alt_serde_json", version = "1", default-features = false, features = ["alloc"] }
# Substrate packages
frame-support = { version = '2.0.1', default-features = false }
frame-system = { version = '2.0.1', default-features = false }
sp-core = { version = '2.0.1', default-features = false }
sp-io = { version = '2.0.1', default-features = false }
sp-runtime = { version = '2.0.1', default-features = false }
sp-std = { version = '2.0.1', default-features = false }
pallet-timestamp = { version = '2.0.1', default-features = false }

[features]
default = ['std']
std = [
  'frame-support/std',
  'frame-system/std',
  'parity-scale-codec/std',
  'sp-io/std',
  'sp-runtime/std',
  'sp-std/std',
  'timestamp/std',
]

